--- a/Age Calculator/index.html
+++ b/Age Calculator/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class="container">
         <p id="currDate"> </p>
-        <p>Enter the DOB badri in format : (MM/DD/YYYY)</p>
+        <p>Enter the DOB in format : (MM/DD/YYYY)</p>
         <input type="text" placeholder="Enter your D.O.B" id="DOB">
         <button id="CalcAge">Age</button>
     </div>
-  <div id="displayAge">
-      <p id="age"></p>
-  </div>
+    <div id="displayAge">
+        <p id="age"></p>
+    </div>
     <script src="script.js">
     </script>
 </body>
